--- a/src/_header.html
+++ b/src/_header.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Dr. Umar Ahmad</title>
+<title>Ahmad Umar</title>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 <link href="css/styles.css" rel="stylesheet">
 </head>
@@ -11,16 +11,21 @@
   <header>
     <nav>
       <div class="name">
-        <a href="/">Umar Ahmad</a>
+        <a href="/">HOME</a>
       </div>
       <div class="menu-icon" id="menuIcon">&#9776;</div>
       <ul id="menuItems">
-        <li><a href="/publication.html">PUBLICATION</a></li>
+        <li><a href="/employment.html">EMPLOYMENT</a></li>
         <li><a href="/education.html">EDUCATION</a></li>
-        <li><a href="/teaching.html">TEACHING</a></li>
-        <li><a href="/softwares.html">SOFTWARES</a></li>
+        <li><a href="/professional-activities.html">PROFESSIONAL ACTIVITIES</a></li>
         <li><a href="/contact.html">CONTACT</a></li>
       </ul>
     </nav>
   </header>
-  <main>
+  <div class="main">
+    <aside class="sidebar">
+      <img src="img/Ahmad_Umar.88a5c36b2e80cf346f0f.png" alt="Profile Photo">
+      <h1 class="name-tag">Ahmad Umar</h1>
+      <p class="profession-tag">Medical Research Scientist</p>
+    </aside>
+    <main class="main-content">
