Update page structure

--- a/src/_header.html
+++ b/src/_header.html
@@ -22,6 +22,7 @@
       </ul>
     </nav>
   </header>
+  <div class="container">
   <div class="main">
     <aside class="sidebar">
       <img src="img/Ahmad_Umar.88a5c36b2e80cf346f0f.png" alt="Profile Photo">
