--- a/src/_header.html
+++ b/src/_header.html
@@ -3,8 +3,9 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Ahmad Umar</title>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+<title>SSG Markdown</title>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+
 <link href="css/styles.css" rel="stylesheet">
 </head>
 <body>
@@ -15,18 +16,9 @@
       </div>
       <div class="menu-icon" id="menuIcon">&#9776;</div>
       <ul id="menuItems">
-        <li><a href="/employment.html">EMPLOYMENT</a></li>
-        <li><a href="/education.html">EDUCATION</a></li>
-        <li><a href="/professional-activities.html">PROFESSIONAL ACTIVITIES</a></li>
-        <li><a href="/contact.html">CONTACT</a></li>
+        <li><a href="/examples.html">Examples</a></li>
       </ul>
     </nav>
   </header>
   <div class="container">
-  <div class="main">
-    <aside class="sidebar">
-      <img src="img/Ahmad_Umar.88a5c36b2e80cf346f0f.png" alt="Profile Photo">
-      <h1 class="name-tag">Ahmad Umar</h1>
-      <p class="profession-tag">Medical Research Scientist</p>
-    </aside>
-    <main class="main-content">
+    <div class="container-fluid my-5">
